[css] Small whitespace fix

--- a/assets/css/templates/_project-details.scss
+++ b/assets/css/templates/_project-details.scss
@@ -133,11 +133,6 @@ figcaption {
     border: none;
 }
 
-/* Insert Readmore */
-.projects .insert-readmore {
-    margin-top: 2rem;
-}
-
 @media screen and (min-width: 560px) {
     .grid__container .project__details--content ul {
         grid-template-columns: 1fr 1fr;
